<resources>
    <string name="app_name">SARVA</string>
    <string name="app_package">com.cccdlabs.sarva</string>
    <string name="app_authority">@string/app_package</string>
    <string name="app_account_type">@string/app_package</string>

    <!-- About -->
    <string name="about_made_by">Made by Johnny Spence</string>
    <string name="about_website">www.cccdlabs.com</string>
    <string name="about_email">johnny@cccdlabs.com</string>

    <!-- Activity Titles-->
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>

    <!-- Main Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_close">Close</string>

    <!-- Bottom Menu -->
    <string name="menu_partner_add">Add</string>
    <string name="menu_partner_check">Check</string>
    <string name="menu_partner_search">Search</string>

    <!-- Shared Preferences -->
    <string name="pref_title_general">Settings</string>
    <string name="pref_label_off">Off</string>
    <string name="pref_label_on">On</string>
    <string name="pref_uuid_key">general_uuid</string>          <!--   DO    -->
    <string name="pref_username_key">general_username</string>  <!--  NOT    -->
    <string name="pref_volume_key">general_volume</string>      <!--TRANSLATE-->
    <string name="pref_username_label">Your name in other devices</string>
    <string name="pref_volume_label">Volume of tone in search mode</string>

    <!-- Messages -->
    <string name="message_added">%1$s has added successfully</string>
    <string name="message_deleted">%1$s has deleted successfully</string>
    <string name="message_updated">%1$s has updated successfully</string>
    <string name="message_action_delete">Delete %1$s?</string>

    <!-- Errors -->
    <string name="error_authentication">Username and/or password invalid</string>
    <string name="error_lockout">User temporarily disabled</string>
    <string name="error_nearby_permission">Nearby must be enabled on this device to continue use</string>
    <string name="error_nearby_publishing">This device has stopped transmission to other devices</string>
    <string name="error_nearby_state">This device has stopped transmission and reception to other devices</string>
    <string name="error_nearby_subscribing">This device has stopped reception of other devices</string>
    <string name="error_network_server">A server error has occurred</string>
    <string name="error_network_timeout">The server connection has timed out</string>
    <string name="error_network_connection">Unable to connect to internet</string>
    <string name="error_respository_general">A database error has occurred</string>
    <string name="error_respository_delete">%1$s could not be deleted</string>
    <string name="error_respository_insert">%1$s could not be saved</string>
    <string name="error_respository_query">%1$s could not be retrieved</string>
    <string name="error_respository_update">"%1$s" could not be updated</string>
    <string name="error_unknown">An unknown error has occurred</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!-- Image descriptions -->
    <string name="image_partner_descr">Partner</string>
    <string name="image_add_partner_descr">Add Partner</string>
    <string name="image_delete_partner_descr">Delete Partner</string>
    <string name="image_partner_status_descr">Partner Status</string>

    <!-- Partner states -->
    <string name="partner_state_found">Transmitting</string>
    <string name="partner_state_not_found">Out of range</string>
    <string name="partner_state_not_active">Not active</string>

    <!-- Common Terms -->
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="error">Error</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>

    <!-- Android Studio generated -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
